@@ -60,7 +60,7 @@ export(add.scope, add1, addmargins, aggregate, aggregate.data.frame,
        residuals.glm, residuals.lm, rexp, rf, rgamma, rgeom, rhyper,
        rlnorm, rlogis, rmultinom, rnbinom, rnorm, rpois, rsignrank,
        rstandard, rstandard.glm, rstandard.lm, rstudent, rstudent.glm,
-       rstudent.lm, rt, runif, rweibull, rwilcox, sd, se.contrast,
+       rstudent.lm, rt, runif, rweibull, rwilcox, rWishart, sd, se.contrast,
        simulate, spline, splinefun, splinefunH, SSD, start,
        stat.anova, step, summary.aov, summary.aovlist, summary.glm,
        summary.infl, summary.lm, summary.manova, summary.mlm, symnum,
