@@ -1,0 +1,99 @@
+#include <R.h>
+#include <Rinternals.h>
+#include <Rmath.h>
+#include <R_ext/Lapack.h>        /* for Lapack (dpotrf, etc.) and BLAS */
+
+#include "mva.h"
+#include "stats.h"
+
+/** alloca n elements of type t */
+#define Alloca(n, t)   (t *) alloca( (size_t) ( (n) * sizeof(t) ) )
+
+/** zero an array */
+#define AZERO(x, n) {int _I_, _SZ_ = (n); for(_I_ = 0; _I_ < _SZ_; _I_++) (x)[_I_] = 0;}
+
+
+/**
+ * Simulate the Cholesky factor of a standardized Wishart variate with
+ * dimension p and nu degrees of freedom.
+ *
+ * @param nu degrees of freedom
+ * @param p dimension of the Wishart distribution
+ * @param upper if 0 the result is lower triangular, otherwise upper
+                triangular
+ * @param ans array of size p * p to hold the result
+ *
+ * @return ans
+ */
+static double
+*std_rWishart_factor(double nu, int p, int upper, double ans[])
+{
+    int pp1 = p + 1;
+
+    if (nu < (double) p || p <= 0)
+	error(_("inconsistent degrees of freedom and dimension"));
+
+    AZERO(ans, p * p);
+    for (int j = 0; j < p; j++) {	/* jth column */
+	ans[j * pp1] = sqrt(rchisq(nu - (double) j));
+	for (int i = 0; i < j; i++) {
+	    int uind = i + j * p, /* upper triangle index */
+		lind = j + i * p; /* lower triangle index */
+	    ans[(upper ? uind : lind)] = norm_rand();
+	    ans[(upper ? lind : uind)] = 0;
+	}
+    }
+    return ans;
+}
+
+/**
+ * Simulate a sample of random matrices from a Wishart distribution
+ *
+ * @param ns Number of samples to generate
+ * @param nuP Degrees of freedom
+ * @param scal Positive-definite scale matrix
+ *
+ * @return
+ */
+SEXP
+R_rWishart(SEXP ns, SEXP nuP, SEXP scal)
+{
+    SEXP ans;
+    int *dims = INTEGER(getAttrib(scal, R_DimSymbol)), info,
+	n = asInteger(ns), psqr;
+    double *scCp, *ansp, *tmp, nu = asReal(nuP), one = 1, zero = 0;
+
+    if (!isMatrix(scal) || !isReal(scal) || dims[0] != dims[1])
+	error(_("'scal' must be a square, real matrix"));
+    if (n <= 0) n = 1;
+    psqr = dims[0] * dims[0];
+    tmp = Alloca(psqr, double);
+    scCp = Alloca(psqr, double);
+    R_CheckStack();
+
+    Memcpy(scCp, REAL(scal), psqr);
+    AZERO(tmp, psqr);
+    F77_CALL(dpotrf)("U", &(dims[0]), scCp, &(dims[0]), &info);
+    if (info)
+	error(_("'scal' matrix is not positive-definite"));
+    PROTECT(ans = alloc3DArray(REALSXP, dims[0], dims[0], n));
+    ansp = REAL(ans);
+    GetRNGstate();
+    for (int j = 0; j < n; j++) {
+	double *ansj = ansp + j * psqr;
+	std_rWishart_factor(nu, dims[0], 1, tmp);
+	F77_CALL(dtrmm)("R", "U", "N", "N", dims, dims,
+			&one, scCp, dims, tmp, dims);
+	F77_CALL(dsyrk)("U", "T", &(dims[1]), &(dims[1]),
+			&one, tmp, &(dims[1]),
+			&zero, ansj, &(dims[1]));
+
+	for (int i = 1; i < dims[0]; i++)
+	    for (int k = 0; k < i; k++)
+		ansj[i + k * dims[0]] = ansj[k + i * dims[0]];
+    }
+
+    PutRNGstate();
+    UNPROTECT(1);
+    return ans;
+}
