@@ -1,5 +1,5 @@
 
-R Under development (unstable) (2012-02-25 r58492)
+R Under development (unstable) (2012-02-29 r58525)
 Copyright (C) 2012 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 Platform: x86_64-unknown-linux-gnu (64-bit)
@@ -3701,7 +3701,7 @@ detaching ‘package:cluster’
 > 
 > asOneSidedFormula("age")
 ~age
-<environment: 0x36d9468>
+<environment: 0x47fb388>
 > asOneSidedFormula(~ age)
 ~age
 > 
@@ -4762,7 +4762,7 @@ function (V)
     r[cbind(1L:p, 1L:p)] <- 1
     r
 }
-<bytecode: 0x55a1168>
+<bytecode: 0x66bddf0>
 <environment: namespace:stats>
 > stopifnot(all.equal(Cl, cov2cor(cov(longley))),
 +           all.equal(cor(longley, method="kendall"),
@@ -6762,8 +6762,8 @@ List of 12
 > gf$linkinv
 function (eta) 
 1/eta
-<bytecode: 0x274b8f8>
-<environment: 0x68503c8>
+<bytecode: 0x3828148>
+<environment: 0x79ac798>
 > gf$variance(-3:4) #- == (.)^2
 [1]  9  4  1  0  1  4  9 16
 > 
@@ -7165,7 +7165,7 @@ attr(,".Environment")
 > environment(as.formula("y ~ x"))
 <environment: R_GlobalEnv>
 > environment(as.formula("y ~ x", env=new.env()))
-<environment: 0x8fbb6e8>
+<environment: 0xa0d8c28>
 > 
 > 
 > ## Create a formula for a model with a large number of variables:
@@ -11573,26 +11573,26 @@ attr(,"degree")
 $linkfun
 function (mu) 
 mu
-<bytecode: 0x274f4e8>
-<environment: 0x6125518>
+<bytecode: 0x3833590>
+<environment: 0x727fba0>
 
 $linkinv
 function (eta) 
 eta
-<bytecode: 0x274d750>
-<environment: 0x6125518>
+<bytecode: 0x38336e0>
+<environment: 0x727fba0>
 
 $mu.eta
 function (eta) 
 rep.int(1, length(eta))
-<bytecode: 0x274d7c0>
-<environment: 0x6125518>
+<bytecode: 0x3833750>
+<environment: 0x727fba0>
 
 $valideta
 function (eta) 
 TRUE
-<bytecode: 0x274db78>
-<environment: 0x6125518>
+<bytecode: 0x3833910>
+<environment: 0x727fba0>
 
 $name
 [1] "identity"
@@ -11603,14 +11603,14 @@ attr(,"class")
 $linkfun
 function (mu) 
 mu^lambda
-<bytecode: 0x6143d20>
-<environment: 0x5fd5fc8>
+<bytecode: 0x7280b58>
+<environment: 0x72647c0>
 
 $linkinv
 function (eta) 
 pmax(eta^(1/lambda), .Machine$double.eps)
-<bytecode: 0x6143e38>
-<environment: 0x5fd5fc8>
+<bytecode: 0x727fd08>
+<environment: 0x72647c0>
 
 > 
 > 
@@ -13519,6 +13519,35 @@ Quade F = 3.8293, num df = 4, denom df = 24, p-value = 0.01519
 > 
 > 
 > cleanEx()
+> nameEx("rWishart")
+> ### * rWishart
+> 
+> flush(stderr()); flush(stdout())
+> 
+> ### Name: rWishart
+> ### Title: Random Wishart Distributed Matrices
+> ### Aliases: rWishart
+> ### Keywords: multivariate
+> 
+> ### ** Examples
+> 
+> ## Artificial
+> S <- toeplitz((10:1)/10)
+> set.seed(11)
+> R <- rWishart(1000, 20, S)
+> dim(R)# 10 10  1000
+[1]   10   10 1000
+> mR <- apply(R, 1:2, mean)# ~= E[ Wish(S, 20) ] = 20 * S
+> stopifnot(all.equal(mR, 20*S, tol = .009))
+> 
+> ## See Details, the variance is
+> Va <- 20*(S^2 + tcrossprod(diag(S)))
+> vR <- apply(R, 1:2, var)
+> stopifnot(all.equal(vR, Va, tol = 1/16))
+> 
+> 
+> 
+> cleanEx()
 > nameEx("read.ftable")
 > ### * read.ftable
 > 
@@ -15267,8 +15296,8 @@ function (v)
     xout = as.double(v), as.integer(length(v)), as.integer(method), 
     as.double(yleft), as.double(yright), as.double(f), NAOK = TRUE, 
     PACKAGE = "stats")$xout
-<bytecode: 0x3372e10>
-<environment: 0x7497250>
+<bytecode: 0x4494528>
+<environment: 0x831c5c0>
 attr(,"call")
 stepfun(1:3, y0, f = 0)
 > ls(envir = environment(sfun0))
@@ -17484,7 +17513,7 @@ Number of Fisher Scoring iterations: 6
 > ### * <FOOTER>
 > ###
 > cat("Time elapsed: ", proc.time() - get("ptime", pos = 'CheckExEnv'),"\n")
-Time elapsed:  13.232 0.256 13.532 0 0 
+Time elapsed:  11.847 0.376 12.861 0 0 
 > grDevices::dev.off()
 null device 
           1 
